# baton

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  server.json
.github/workflows/: ci.yml  oidc-debug.yml  publish-crates.yml  publish-npm.yml  release.yml
assets/: demo.tape  social.tape
benchmark/: RESULTS.md  bench.py  continuation.py
launch/: posts.md
npm/: README.md  npm-shrinkwrap.json  package.json  run-baton.js
scripts/: check-version-sync.sh
src/: canonical.rs  config.rs  convert.rs  detect.rs  main.rs  mcp.rs  pick.rs  watch.rs
src/formats/: aider.rs  claude_code.rs  cline.rs  codex.rs  continue_dev.rs  cursor.rs  gemini_cli.rs  mod.rs  opencode.rs  zed.rs
