[package]
name = "baton-mcp"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
description = "Pass the baton between coding agents. Convert any coding-agent session to any other, and wire itself into every agent's MCP config."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kaseban/baton"
homepage = "https://github.com/Kaseban/baton"
keywords = ["mcp", "claude", "opencode", "codex", "cursor"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
exclude = ["/.github", "/target", "/tests/fixtures"]
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/baton-{ target }.{ archive-format }"
bin-dir = "baton"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "fs", "sync"] }

[dependencies.rmcp]
version = "2"
features = ["server", "transport-io"]
optional = true

[features]
default = ["mcp"]
mcp = ["dep:rmcp"]

[[bin]]
name = "baton"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
